2012-12-18 Rene Kluwen <rene.kluwen at chimit.nl>
    Another patch by Victor Luchitz. Multi-part messages now have an smpp message-id of their own.
    This is in stead of the message id that first used to be the one of the first message-part.

2012-12-11 Rene Kluwen <rene.kluwen at chimit.nl>
        Reverted back to v63 due to too many bugs and problems in these sources.
        At the same time, introducing a new ESME-to-MT routing possibility. See documentation about 'smsc-route'.
        Patch provided by Victor Luchitz.
        Users that currently rely on the MO-routing patch are encouraged to use bearerbox's 'smsbox-route'
        in combination with 'use-system-id-as-box-id'. It works exactly the same.
        The "old" opensmppbox is still availabe as a branch called "single-bearerbox-connection".
        You can still check that branch out if your software is relying on it.

2011-11-05 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Fixed memory leak concerning MO messages.
    Thanks to Victor Luchitz for reporting.

2011-05-13 Rene Kluwen <rene.kluwen at chimit.nl>
    * configure.in: the new configure file didn't seem to work, after make rpm.
    Couldn't find the Kannel libraries. This patch fixes that.

2011-05-09 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Default GSM character set is converted to UTF-8 (Kannel's internal
    way of exchanging messages). The facilitates foreign (e.g. greek) characters.
    Thanks to Nii Ako Ampa-Sowa (ampasowa at gmail.com) for the patch.

2011-04-07 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Tested system_type on being provided by the smpp client,
    because if not, opensmppbox would crash. Thanks to info at xen-housing.sk for reporting.

2010-11-10 Alexander Malysh <amalysh at kannel.org>
    * gw/opensmppbox.c: applied patch that adds validity and deferred handling.
      Thanks to "XEN-Housing s.r.o." <info at xen-housing.sk> and me :-) for this patch.
