@@ -1,3 +1,6 @@
+2013-07-10 Rene Kluwen <rene.kluwen at chimit.nl>
+    Path provided by Kelvin Porter Kelvin.Porterat h3net.com. Allows routing to smsc based upon receiver number.
+
 2012-12-18 Rene Kluwen <rene.kluwen at chimit.nl>
     Another patch by Victor Luchitz. Multi-part messages now have an smpp message-id of their own.
     This is in stead of the message id that first used to be the one of the first message-part.
